stylings and spacing issues

--- a/development/style.scss
+++ b/development/style.scss
@@ -366,7 +366,6 @@ button#trash {
 
   li.folder {
     font-weight: bold;
-    padding: 2px 0 2px 10px;
     background: $white-trans-deg;
     border-top: 1px solid $white-trans-deg;
     .folder {
@@ -389,7 +388,7 @@ button#trash {
 
     .fa-file {
       color: $input-bleu;
-      margin-right: 15px;
+      margin-right: 20px;
     }
 
     .fa-folder {
